
        * src/openvrml/OpenVRML/browser.cpp: Added some exception
          specifications.

        * src/openvrml/OpenVRML/node.cpp,
          src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h: Removed deprecated method
          Node::inverseTransform(Viewer *).

2002-09-10  Thomas Flynn  <tflynn@users.sourceforge.net>

        * doc/conformance.html: Retest Anchor, Inline and most of PROTO.

        * src/openvrml/OpenVRML/ScriptJDK.cpp: Fix bug in MFInt32::getValue.
          Add additional documentation.

        * models/TestJSAI.java: Add tests of MFColor and MFFloat fields.

        * java/vrml/field/MFColor.java: Update javadoc comments.

2002-09-09  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp,
          src/openvrml/OpenVRML/node.h: Removed Node::getChildren. This
          method seemed prone to misunderstanding, and thus created more
          problems than it solved. Since it was just a convenience
          method, anyone who really needs this functionality can
          implement it as a nonmember.

2002-09-08  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp: Should now correctly handle
          fields in PROTOs that aren't IS'd to anything in the
          implementation.

2002-09-07  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/vrml97node.cpp: Removed code in
          Browser::sensitiveEvent to print the URI when the pointer is
          over the Anchor. We need to call Browser::setDescription, but
          inside the implementation of Anchor. Removed
          Anchor::getDescription and Anchor::getUrl. Modified
          Scene::loadURI to do nothing if the MFString uri argument is
          empty.

2002-09-07  Thomas Flynn  <tflynn@users.sourceforge.net>
