@@ -14,6 +14,9 @@
           src/openvrml/OpenVRML/vrml97node.h: Removed deprecated method
           Node::inverseTransform(Viewer *).
 
+        * src/openvrml/OpenVRML/vrml97node.cpp: Removed some #if 0'd
+          cruft.
+
 2002-09-10  Thomas Flynn  <tflynn@users.sourceforge.net>
 
         * doc/conformance.html: Retest Anchor, Inline and most of PROTO.
